--- a/TwoQubit-VQE.html
+++ b/TwoQubit-VQE.html
@@ -11806,7 +11806,7 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Build-a-quantum-circuit-inspired-by-MPS">Build a quantum circuit inspired by MPS<a class="anchor-link" href="#Build-a-quantum-circuit-inspired-by-MPS">&#182;</a></h2><p>Hadamard Gate with dashed box is applied only when measuring on the X basis.</p>
-<div style="display:inline-block"><img style="float: left", src="images/hgate.png" width="50"/></div><p>The following notation measure Measure and Reset a qubit to 0.</p>
+<div style="display:inline-block"><img style="float: left", src="images/hgate.png" width="50"/></div><p>The following gates Measure and Reset a qubit to 0.</p>
 <div style="display:inline-block"><img style="float:left", src="images/mreset.png" width="100"></div><p>The goal of this section is to build the MPS-inspired sampler as our ansatz</p>
 <div style="display:inline-block"><img style="float:left", src="images/twoqubit.png"></div>
 </div>
