--- a/yao_port_qi.html
+++ b/yao_port_qi.html
@@ -11788,6 +11788,10 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="overview">overview<a class="anchor-link" href="#overview">&#182;</a></h1><p><a href="https://github.com/QuantumBFS/Yao.jl"><code>Yao</code></a> is a powerful tool for quantum circuit based simulation, but it does not support many density matrix related operations. This is why we need to port <code>Yao.jl</code> with <a href="https://github.com/QuantumBFS/QuantumInformation.jl"><code>QuantumInformation (QI)</code></a> sometimes (e.g. for computing entanglement entropy).</p>
+<ul>
+<li><code>Yao.jl</code> Documentation: <a href="https://quantumbfs.github.io/Yao.jl/latest/">https://quantumbfs.github.io/Yao.jl/latest/</a> (paper is comming out)</li>
+<li><code>QuantumInformation.jl</code> paper: <a href="https://arxiv.org/abs/1806.11464">https://arxiv.org/abs/1806.11464</a></li>
+</ul>
 <h3 id="Yao-provides"><code>Yao</code> provides<a class="anchor-link" href="#Yao-provides">&#182;</a></h3><ul>
 <li>high performance quantum circuit based simulation<ul>
 <li>parameter management</li>
