--- a/qbirplayground.html
+++ b/qbirplayground.html
@@ -6,7 +6,7 @@
      
         <script type = "text/javascript">
             // Let us open a web socket
-            var ws = new WebSocket("wss://69.171.73.23:8080");
+            var ws = new WebSocket("ws://69.171.73.23:8080");
             
             if ("WebSocket" in window) {
                 ws.onopen = function() {
