--- a/__site/code/index.html
+++ b/__site/code/index.html
@@ -45,7 +45,7 @@
 
 <big>
 Dear reader,
-please <a href="https://github.com/GiggleLiu/giggleliu.github.io">file an issue</a> if any gist or notebook is broken, thank you! - Jinguo</big>
+please <a href="https://github.com/GiggleLiu/giggleliu.github.io/issues">file an issue</a> if any gist or notebook is broken, thank you! - Jinguo</big>
 
 <h2 id="notebooks"><a href="#notebooks" class="header-anchor">Notebooks</a></h2>
 <ul>
