--- a/__site/about/index.html
+++ b/__site/about/index.html
@@ -1,77 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  
-  <link rel="stylesheet" href="/css/franklin.css">
-<link rel="stylesheet" href="/css/poole_hyde.css">
-<!-- style adjustments -->
-<style>
-  html {font-size: 17px;}
-  .franklin-content {position: relative; padding-left: 8%; padding-right: 5%; line-height: 1.35em;}
-  @media (min-width: 940px) {
-    .franklin-content {width: 100%; margin-left: auto; margin-right: auto;}
-  }
-  @media (max-width: 768px) {
-    .franklin-content {padding-left: 6%; padding-right: 6%;}
-  }
-</style>
-<link rel="icon" href="/assets/favicon.png">
-
-   <title>About Jinguo Liu</title>  
-</head>
-<body>
-<div class="sidebar">
-  <div class="container sidebar-sticky">
-    <div class="sidebar-about">
-      <h1><a href="/">Jinguo LIU</a></h1>
-      <p class="lead">Early to bed and early to rise, makes a man healthy, wealthy, and wise.</p>
-    </div>
-    <nav class="sidebar-nav">
-      <a class="sidebar-nav-item " href="/">Home</a>
-      <a class="sidebar-nav-item " href="/blogs/">Blogs</a>
-      <a class="sidebar-nav-item " href="/code/">Code</a>
-      <a class="sidebar-nav-item " href="/about/">About Me</a>
-    </nav>
-    <p>&copy; GiggleLiu.</p>
-  </div>
-</div>
-<div class="content container">
-
-<!-- Content appended here -->
-<div class="franklin-content"><p>
-<img src="/assets/images/headshot.jpg" style="max-width:300px"/>
- Jinguo Liu is an associate professor in Hong Kong University of Science and Technology &#40;Guangzhou&#41;. See my <a href="https://github.com/GiggleLiu/CV/raw/master/cv.pdf">CV</a> to know more about me.</p>
-<h4 id="research_interests"><a href="#research_interests" class="header-anchor">Research Interests</a></h4>
-<ul>
-<li><p>Quantum Computating and reversible computing</p>
-</li>
-<li><p>Tensor Networks</p>
-</li>
-<li><p>Automatic Differentiation</p>
-</li>
-</ul>
-<h3 id="contact_me"><a href="#contact_me" class="header-anchor">Contact me</a></h3>
-<p>I am recruiting PhD students, please read this <a href="https://zhuanlan.zhihu.com/p/566530117">blog post</a> for more information. <a href="mailto:cacate0129@gmail.com">cacate0129@gmail.com</a></p>
-<div class="page-foot">
-    <div>
-    <a href="https://github.com/GiggleLiu" rel="nofollow noopener noreferrer"><i class="fab fa-fw fa-github" aria-hidden="true"></i> Github: GiggleLiu</a>
-    <br>
-    <a href="https://twitter.com/GiggleLiu" rel="nofollow noopener noreferrer"><i class="fab fa-fw fa-twitter" aria-hidden="true"></i> Twitter: GiggleLiu</a>
-    <br>
-    <a href="https://scholar.google.com/citations?user=4edw228AAAAJ" rel="nofollow noopener noreferrer"><i class="fa-google-scholar" aria-hidden="true"></i> Google Scholar: 4edw228AAAAJ</a>
-    </div>
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> GiggleLiu. Last modified: November 20, 2022.
-    Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
-</div>
-</div><!-- CONTENT ENDS HERE -->
-    </div>  <!-- div: content container -->
-    <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
-    
-    
-
-  </body>
-
-</html>
+<!doctype html> <html lang=en > <meta charset=UTF-8 > <meta name=viewport  content="width=device-width, initial-scale=1"> <link rel=stylesheet  href="/css/franklin.css"> <link rel=stylesheet  href="/css/poole_hyde.css"> <style> html {font-size: 17px;} .franklin-content {position: relative; padding-left: 8%; padding-right: 5%; line-height: 1.35em;} @media (min-width: 940px) { .franklin-content {width: 100%; margin-left: auto; margin-right: auto;} } @media (max-width: 768px) { .franklin-content {padding-left: 6%; padding-right: 6%;} } </style> <link rel=icon  href="/assets/favicon.png"> <title>About Jinguo Liu</title> <div class=sidebar > <div class="container sidebar-sticky"> <div class=sidebar-about > <h1><a href="/">Jinguo LIU</a></h1> <p class=lead >Early to bed and early to rise, makes a man healthy, wealthy, and wise.</p> </div> <nav class=sidebar-nav > <a class="sidebar-nav-item " href="/">Home</a> <a class="sidebar-nav-item " href="/blogs/">Blogs</a> <a class="sidebar-nav-item " href="/code/">Code</a> <a class="sidebar-nav-item " href="/about/">About Me</a> </nav> <p>&copy; GiggleLiu.</p> </div> </div> <div class="content container"> <div class=franklin-content ><p> <img src="/assets/images/headshot.jpg" style="max-width:300px"/> Jinguo Liu is an associate professor in Hong Kong University of Science and Technology &#40;Guangzhou&#41;. See my <a href="https://github.com/GiggleLiu/CV/raw/master/cv.pdf">CV</a> to know more about me.</p> <h4 id=research_interests ><a href="#research_interests" class=header-anchor >Research Interests</a></h4> <ul> <li><p>Quantum Computating and reversible computing</p> <li><p>Tensor Networks</p> <li><p>Automatic Differentiation</p> </ul> <h3 id=contact_me ><a href="#contact_me" class=header-anchor >Contact me</a></h3> <p>I am recruiting PhD students, please read this <a href="https://zhuanlan.zhihu.com/p/566530117">blog post</a> for more information. <a href="mailto:cacate0129@gmail.com">cacate0129@gmail.com</a></p> <div class=page-foot > <div> <a href="https://github.com/GiggleLiu" rel="nofollow noopener noreferrer"><i class="fab fa-fw fa-github" aria-hidden=true ></i> Github: GiggleLiu</a> <br> <a href="https://twitter.com/GiggleLiu" rel="nofollow noopener noreferrer"><i class="fab fa-fw fa-twitter" aria-hidden=true ></i> Twitter: GiggleLiu</a> <br> <a href="https://scholar.google.com/citations?user=4edw228AAAAJ" rel="nofollow noopener noreferrer"><i class=fa-google-scholar  aria-hidden=true ></i> Google Scholar: 4edw228AAAAJ</a> </div> <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> GiggleLiu. Last modified: November 20, 2022. Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>. </div> </div> </div> <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin=anonymous ></script>
